// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Select Disabled Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-1u60tye"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={true}
                  isClearable={true}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-1toli7u"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={true}
                  isClearable={true}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-14y2it5"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={true}
                  isClearable={true}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-owk064"
            >
              <div>
                <input
                  className="css-12o4mty"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-owk064"
            >
              <div
                className="css-94u0u-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
              <div>
                <input
                  className="css-12o4mty"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-npi060"
            >
              <div
                className="css-94u0u-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-9ax7lg"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1aoir3w"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1uj7jtz"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-13t0mtv"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1dpr4qv"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-f2fep9"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1dpr4qv"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-eth9wb"
              >
                <div
                  className="css-npi060"
                >
                  <div>
                    <input
                      className="css-1h8uoiz"
                      disabled={false}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-isy7x3-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1dpr4qv"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Simple Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-13t0mtv"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-f2fep9"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-eth9wb"
          >
            <div
              className="css-npi060"
            >
              <div>
                <input
                  className="css-1h8uoiz"
                  disabled={false}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-isy7x3-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
